1.1.14
- Fix Chapter parser.
- Optimize Main Novel list parsing.

1.1.13-Merry-Christmas:
- Update parser to handle ToAru Index.
- Update immersive mode for KitKat (liyhcharles).
- Add check DB (Tap DB Save Location).
- Add daily AutoBackup DB with rolling backup support (default is 4).
- Add option to define DB backup location
- Enhace DB restore: allow to choose backup version.
- Update Settings Screen.
- Update free space check for backup.
- Fix null pointer exception on Setting when updating.

1.1.12:
- Fix External Page Refresh.
- Reorganize Preferences screen.
- Update backup and restore to include all images, controlled by flag.
- Update relink image to process all images.
- Add free space validation for backup image.
- Fix isMissing flag for redlinked chapter.
- Fix update service for external chapter.
- Fix refresh for external chapter.
- Add DisplayChangelogActivity (yaminorito).
- Update image path check logic (yaminorito).
- Add Mark Unread Entire Volume context menu (yaminorito).
- Update Android 4.4/Kitkat text zoom handler (need to be tested).
- Update read handler to ignore redlink=1 chapter.
- Add filter on Update History.
- Add option to hide redlink page (separated from missing).
- Change jsoup library to modded one (replace String.isEmpty()).
- Enable immersive mode for KitKat in fullscreen (liyhcharles).

1.1.11:
- Add volume indicator in bookmark.
- Add Back to Chapter List in Jump List.
- Update parser to include redlink page in Chapter List (marked as missing page).
- Update UI for main: add button states.
- Fix Alt. Novel listing bug.
- Add thumbnails image backup and restore.
- Add thumbnails image relinker.
- Update UI Translations.
- Add option to order bookmarks by Creation Date.
- Fix Settings menu in Bookmark activity.
- Add option to Auto Download updated chapter from service.

1.1.10:
- Add Text-to-speech feature.
- Show big image if novel cover is clicked.
- Fix last position bug.
- Replace Progress Dialog with inline Progress Bar.