@@ -8,22 +8,28 @@ import android.util.Log;
 import android.view.View;
 import android.widget.AdapterView;
 import android.widget.AdapterView.OnItemClickListener;
+import android.widget.LinearLayout;
 import android.widget.ListView;
+import android.widget.ProgressBar;
+import android.widget.TextView;
 import android.widget.Toast;
 
 import com.actionbarsherlock.app.SherlockActivity;
 import com.actionbarsherlock.view.Menu;
 import com.actionbarsherlock.view.MenuItem;
 import com.erakk.lnreader.Constants;
+import com.erakk.lnreader.LNReaderApplication;
 import com.erakk.lnreader.R;
 import com.erakk.lnreader.UIHelper;
 import com.erakk.lnreader.adapter.UpdateInfoModelAdapter;
+import com.erakk.lnreader.callback.ICallbackEventData;
+import com.erakk.lnreader.callback.ICallbackNotifier;
 import com.erakk.lnreader.dao.NovelsDao;
 import com.erakk.lnreader.model.UpdateInfoModel;
 import com.erakk.lnreader.model.UpdateType;
 import com.erakk.lnreader.service.UpdateService;
 
-public class UpdateHistoryActivity extends SherlockActivity {
+public class UpdateHistoryActivity extends SherlockActivity implements ICallbackNotifier {
 	private static final String TAG = UpdateHistoryActivity.class.toString();
 	ArrayList<UpdateInfoModel> updateList;
 	ListView updateListView;
@@ -45,6 +51,15 @@ public class UpdateHistoryActivity extends SherlockActivity {
 			}
 		});
 		updateContent();
+		LNReaderApplication.getInstance().setUpdateServiceListener(this);
+	}
+
+	@Override
+	protected void onResume() {
+		super.onResume();
+
+		// relisting all handler
+		LNReaderApplication.getInstance().setUpdateServiceListener(this);
 	}
 
 	private void openChapter(UpdateInfoModel item) {
@@ -106,6 +121,9 @@ public class UpdateHistoryActivity extends SherlockActivity {
 				adapter.filterDeleted(item.isChecked());
 			}
 			return true;
+		case R.id.menu_run_update:
+			runUpdate();
+			return true;
 		case android.R.id.home:
 			Intent intent = getIntent();
 			String caller = intent.getStringExtra(Constants.EXTRA_CALLER_ACTIVITY);
@@ -121,6 +139,18 @@ public class UpdateHistoryActivity extends SherlockActivity {
 		return super.onOptionsItemSelected(item);
 	}
 
+	private void runUpdate() {
+		LinearLayout panel = (LinearLayout) findViewById(R.id.layout_update_status);
+		if (panel != null) {
+			panel.setVisibility(View.VISIBLE);
+			LNReaderApplication.getInstance().runUpdateService(true, this);
+			TextView txtUpdate = (TextView) findViewById(R.id.txtUpdate);
+			txtUpdate.setText("Update Status: " + getResources().getString(R.string.running));
+			ProgressBar progress = (ProgressBar) findViewById(R.id.download_progress_bar);
+			progress.setIndeterminate(true);
+		}
+	}
+
 	public void updateContent() {
 		try {
 			updateList = NovelsDao.getInstance(this).getAllUpdateHistory();
@@ -131,6 +161,31 @@ public class UpdateHistoryActivity extends SherlockActivity {
 		} catch (Exception e) {
 			Log.e(TAG, e.getMessage(), e);
 			Toast.makeText(this, getResources().getString(R.string.error_update) + ": " + e.getMessage(), Toast.LENGTH_LONG).show();
+		}
+	}
+
+	@Override
+	public void onCallback(ICallbackEventData message) {
+		LinearLayout panel = (LinearLayout) findViewById(R.id.layout_update_status);
+		if (panel != null) {
+			panel.setVisibility(View.VISIBLE);
+
+			TextView txtUpdate = (TextView) findViewById(R.id.txtUpdate);
+			txtUpdate.setText("Update Status: " + message.getMessage());
+
+			ProgressBar progress = (ProgressBar) findViewById(R.id.download_progress_bar);
+			if (message.getPercentage() < 100) {
+				progress.setIndeterminate(false);
+				progress.setMax(100);
+				progress.setProgress(message.getPercentage());
+				progress.setProgress(0);
+				progress.setProgress(message.getPercentage());
+				progress.setMax(100);
+			}
+			else {
+				panel.setVisibility(View.GONE);
+				updateContent();
+			}
 		}
 	}
 }
