@@ -3,8 +3,10 @@ package com.erakk.lnreader.callback;
 public class CallbackEventData implements ICallbackEventData {
 	protected String message;
 	protected String source;
+	protected int percentage = -1;
 
-	public CallbackEventData() {};
+	public CallbackEventData() {
+	};
 
 	public CallbackEventData(String message) {
 		this.message = message;
@@ -12,6 +14,12 @@ public class CallbackEventData implements ICallbackEventData {
 
 	public CallbackEventData(String message, String source) {
 		this.message = message;
+		this.source = source;
+	}
+
+	public CallbackEventData(String message, int percentage, String source) {
+		this.message = message;
+		this.percentage = percentage;
 		this.source = source;
 	}
 
@@ -27,5 +35,9 @@ public class CallbackEventData implements ICallbackEventData {
 
 	public String getSource() {
 		return source;
+	}
+
+	public int getPercentage() {
+		return percentage;
 	}
 }
