@@ -3,5 +3,8 @@ package com.erakk.lnreader.callback;
 public interface ICallbackEventData {
 
 	public abstract String getMessage();
+
 	public abstract void setMessage(String message);
+
+	public abstract int getPercentage();
 }
